kustomize/thecompany-blue/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thecompany-blue-service
spec:
  selector:
    app: thecompany-blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
